[gd_scene load_steps=12 format=3 uid="uid://dr4h88t048e0x"]

[ext_resource type="Script" uid="uid://d2v6obbu0iftg" path="res://Multiplayer/Player/player_rigidbody_mp.gd" id="1_shab4"]
[ext_resource type="Script" path="res://Multiplayer/Player/pickup_mp.gd" id="3_1wtpt"]
[ext_resource type="PackedScene" uid="uid://c38fv3yd0hk7k" path="res://hud.tscn" id="4_m8qwc"]
[ext_resource type="PackedScene" path="res://Multiplayer/Player/pickup_mp.tscn" id="4_t6vuy"]
[ext_resource type="Script" uid="uid://c4ep7bjvvojei" path="res://Multiplayer/Player/input_synchroniser.gd" id="5_5vwrj"]
[ext_resource type="PackedScene" uid="uid://i8kme0q85fxr" path="res://Multiplayer/Player/interact_mp.tscn" id="5_t6vuy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jbuyh"]
friction = 0.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_shab4"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("BoundingBox:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("BoundingBox/RotationHelper:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:attempt_pickup")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:attempt_interact")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_oe4g0"]
properties/0/path = NodePath("InputSynchroniser:movement_input")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchroniser:look_delta")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchroniser:jumping")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qqgab"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n7bvk"]

[node name="PlayerRigidbodyMP" type="RigidBody3D"]
disable_mode = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_jbuyh")
custom_integrator = true
continuous_cd = true
script = ExtResource("1_shab4")

[node name="PlayerSynchroniser" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_shab4")

[node name="InputSynchroniser" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_oe4g0")
script = ExtResource("5_5vwrj")

[node name="BoundingBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0509262, 0)
shape = SubResource("CylinderShape3D_qqgab")

[node name="RotationHelper" type="Node3D" parent="BoundingBox"]
script = ExtResource("3_1wtpt")

[node name="Camera3D" type="Camera3D" parent="BoundingBox/RotationHelper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
fov = 90.0

[node name="Pickup_MP" parent="BoundingBox/RotationHelper" instance=ExtResource("4_t6vuy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Interact_MP" parent="BoundingBox/RotationHelper" instance=ExtResource("5_t6vuy")]

[node name="ThirdPerson" type="Node3D" parent="BoundingBox"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.94907, 3)

[node name="FirstPerson" type="Node3D" parent="BoundingBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="FloorChecks" type="Node3D" parent="BoundingBox"]

[node name="Diagonals" type="Node3D" parent="BoundingBox/FloorChecks"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)

[node name="FloorRay" type="RayCast3D" parent="BoundingBox/FloorChecks/Diagonals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.45)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay2" type="RayCast3D" parent="BoundingBox/FloorChecks/Diagonals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.45)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay4" type="RayCast3D" parent="BoundingBox/FloorChecks/Diagonals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0, 0)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay3" type="RayCast3D" parent="BoundingBox/FloorChecks/Diagonals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0, 0)
target_position = Vector3(0, -1.1, 0)

[node name="Cardinals" type="Node3D" parent="BoundingBox/FloorChecks"]

[node name="FloorRay" type="RayCast3D" parent="BoundingBox/FloorChecks/Cardinals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.45)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay2" type="RayCast3D" parent="BoundingBox/FloorChecks/Cardinals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.45)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay4" type="RayCast3D" parent="BoundingBox/FloorChecks/Cardinals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0, 0)
target_position = Vector3(0, -1.1, 0)

[node name="FloorRay3" type="RayCast3D" parent="BoundingBox/FloorChecks/Cardinals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0, 0)
target_position = Vector3(0, -1.1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_n7bvk")

[node name="HUD" parent="." instance=ExtResource("4_m8qwc")]
